# FamCalendar

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  streamlit_famcalendar.py
.github/workflows/: ci.yml
FamCalender/: constants.py
FamCalender/backend/: appointments.json  main.py
FamCalender/frontend/: api.py  calendar_view.py  charts.py  constants.py  forms.py  navigation.py  numpy_analysis_view.py  pandas_view.py  streamlit.py
tests/: test_backend.py
