[project]
name = "famcalender"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.136.1",
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "pandas>=3.0.3",
    "python-dotenv>=1.2.1",
    "streamlit>=1.57.0",
    "uvicorn>=0.46.0",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F"]

[tool.mypy]
ignore_missing_imports = true
